# knowledge_base

./: .env  .env.example  .gitignore  importtime_node_document_split.txt  pyproject.toml  正则表达式学习笔记.md
config/: bailian_mcp_config.py  embedding_config.py  lm_config.py  milvus_config.py  mineru_config.py  reranker_config.py
processor/: base.py  main_graph.py  state.py
processor/import_processor/: base.py  config.py  exceptions.py  main_graph.py  node_bge_embedding.py  node_document_split.py  node_entry.py  node_import_milvus.py  node_item_name_recognition.py  node_md_img.py  node_pdf_to_md.py
processor/import_processor/nodes/: node_bge_embedding.py  node_document_split.py  node_entry.py  node_import_milvus.py  node_item_name_recognition.py  node_md_img.py  node_pdf_to_md.py
processor/query_processor/: base.py  main_graph.py  state.py
processor/query_processor/nodes/: node_answer_output.py  node_item_name_confirm.py  node_rerank.py  node_rrf.py  node_search_embedding.py  node_search_embedding_hyde.py  node_web_search_mcp.py
promote/: item_name_recognition.py
test/: bgem3测试向量转化_稠密向量.py  bgem3测试向量转换.py  测试连接mongodb.py  验证GPU.py
test/fastapi/: 01demo.py  02demo.py  backend_cors.py  fast_amont.py  uplaod_file.py
test/sse/: sse1.html  sse1.py  sse2.html  sse2.py  sse3.html  sse3.py  sse4.html  sse4.py
tool/: logger.py
utils/: embedding_utils.py  json_utils.py  llm_utils.py  milvus_utils.py  minio_utils.py  mongo_history_utils.py  reranker_http_utils.py  task_utils.py
web/api/: import_service.py
web/page/: import.html
(+3 files in other folders)
