[project]
name = "zgzk"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "colorlog>=6.10.1",
    "fastapi>=0.136.3",
    "grandalf>=0.8",
    "importconfig",
    "langchain>=1.3.2",
    "langchain-openai>=1.2.2",
    "langchain-text-splitters>=1.1.2",
    "langgraph>=1.2.2",
    "minio>=7.2.20",
    "numpy>=2.4.6",
    "path>=17.1.1",
    "pymongo>=4.17.0",
    "python-dotenv>=1.2.2",
]
